# cynthia

./: .gitignore  Makefile  README.md  db-compose.yaml  go.mod  go.sum  main.go  package.json  tsconfig.json
api/: api.go  messages.go
artemis/: Cargo.toml
artemis/src/: client.rs  events.rs  log.rs  main.rs  opcode.rs  payload.rs  stream.rs  traits.rs
artemis/src/api/: avatar_decoration_data.rs  message.rs  mod.rs  user.rs
artemis/src/api/channel/: kind.rs  mention.rs  mod.rs
artemis/src/api/message/: attachment.rs  mod.rs
artemis/src/api/message/embed/: author.rs  field.rs  footer.rs  image.rs  kind.rs  mod.rs  provider.rs  thumbnail.rs  video.rs
assets/: embed.go  pokemon.db-shm  pokemon.db-wal  trainer-sheet.json
bot/: main.go
constants/: backend.go
csv/: package.json  tsconfig.json
ds/: api.go  api_auth.go  api_cdn.go  api_commands.go  api_interactions.go  api_messages.go  api_users.go  client.go  collector.go  dispatch-event.go  ds.go  events.go  gateway.go  helpers.go  intents.go  payload.go  payloads_channel.go  payloads_client.go  payloads_command.go  payloads_guild.go  payloads_interaction.go  payloads_message.go  payloads_misc.go  payloads_send.go  payloads_user.go  snowflake.go  snowflake_test.go  types.go  types_appilication.go  types_channel.go  types_client.go  types_commands.go  types_components.go  types_guild.go  types_interaction.go  types_message.go  types_misc.go  types_user.go  util.go
dstypes/: activity-assets.go  activity-timestamps.go  activity-type.go  activity.go  application-command-permissions.go  channel-info-channel.go  (+50 more)
(+489 files in other folders)
